feat: implementing activation for users
